--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item active">
           <a class="nav-link" routerLinkActive="active" routerLink="/list">Home</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLinkActive="active" routerLink="/order-product">Ordini</a>
+        </li>
         
       </ul>
     </div>
